--- a/docs/02.后端技术/01.MySql/07.MySQL 日志简述.md
+++ b/docs/02.后端技术/01.MySql/07.MySQL 日志简述.md
@@ -46,7 +46,7 @@ author:
 * undo log 和数据页的刷盘策略是一样的，都需要通过 redo log 保证持久化。
 * buffer pool 中有 undo 页，对 undo 页的修改也都会记录到 redo log。
 * redo log 会每秒刷盘，提交事务时也会刷盘，数据页和 undo 页都是靠这个机制保证持久化的。
-![Img](./FILES/5.日志.md/img-20230102210319.png)
+<!-- ![Img](./FILES/5.日志.md/img-20230102210319.png) -->
 
 ## 三、redo log
 ### 1，为什么需要
@@ -65,7 +65,7 @@ author:
     * undo log 记录了此次事务「开始前」的数据状态，记录的是更新之前的值；
     * 事务提交之前发生了崩溃，重启后会通过 undo log 回滚事务；
     * 事务提交之后发生了崩溃，重启后会通过 redo log 恢复事务；
-![Img](./FILES/5.日志.md/img-20221219202958.png)
+<!-- ![Img](./FILES/5.日志.md/img-20221219202958.png) -->
 ### 5，刷盘
 #### 5.1 非直接刷盘
 * 执行一个事务的过程中，产生的 redo log 不是直接写入磁盘的，直接写入会产生大量的 I/O 操作；
@@ -91,7 +91,7 @@ author:
 * 默认情况下，InnoDB 存储引擎有 1 个重做日志文件组(redo log Group），由 2 个 redo log 文件组成，分别叫 ：ib_logfile0 和 ib_logfile1；
 * 重做日志文件组是以循环写的方式工作的，从头开始写，写到末尾就又回到开头，相当于一个环形；
 * redo log 是为了防止 Buffer Pool 中的脏页丢失而设计的，随着系统运行，脏页刷新到了磁盘中，那么 redo log 对应的记录也就没用了，这时候擦除这些旧记录，以腾出空间记录新的更新操作；
-![Img](./FILES/5.日志.md/img-20230102212405.png)
+<!-- ![Img](./FILES/5.日志.md/img-20230102212405.png) -->
 * 循环写
     * write pos 和 checkpoint 的移动都是顺时针方向；
     * write pos ～ checkpoint 之间的部分（图中的红色部分），用来记录新的更新操作；
