--- a/docs/02.后端技术/04.Kafka/06.Kafka 分区分配策略介绍.md
+++ b/docs/02.后端技术/04.Kafka/06.Kafka 分区分配策略介绍.md
@@ -18,9 +18,9 @@ author:
 
 ## 二、范围分配
 
-范围分配策略（RangeAssignor）的原理是按照消费者总数和分区总数进行整除运算来获得一个跨度，然后将分区按照跨度进行平均分配，以保证分区尽可能均匀地分配给所有的消费者。
-对于每一个主题，RangeAssignor 策略会将消费组内所有订阅这个主题的消费者按照名称的字典序排序，然后为每个消费者划分固定的分区范围，如果不够平均分配，那么字典序靠前的消费者会被多分配一个分区。
-例如，消费组内有2个消费者C0和C1，主题有4个分区 p0、p1、p2、p3，那么对应的分配如下：
+* 范围分配策略（RangeAssignor）的原理是按照消费者总数和分区总数进行整除运算来获得一个跨度，然后将分区按照跨度进行平均分配，以保证分区尽可能均匀地分配给所有的消费者。
+* 对于每一个主题，RangeAssignor 策略会将消费组内所有订阅这个主题的消费者按照名称的字典序排序，然后为每个消费者划分固定的分区范围，如果不够平均分配，那么字典序靠前的消费者会被多分配一个分区。
+* 例如，消费组内有2个消费者C0和C1，主题有4个分区 p0、p1、p2、p3，那么对应的分配如下：
 ::: center
 平均分配
 
@@ -28,9 +28,8 @@ c0: p1   p2
 
 c1: p3   p4 
 :::
-
-假设n=分区数/消费者数量，m=分区数%消费者数量，那么前m个消费者每个分配n+1个分区，后面的消费者每个分配n个分区。
-例如，消费组内有2个消费者C0和C1，主题有3个分区 p0、p1、p2，那么对应的分配如下：
+* 假设n=分区数/消费者数量，m=分区数%消费者数量，那么前m个消费者每个分配n+1个分区，后面的消费者每个分配n个分区。
+* 例如，消费组内有2个消费者C0和C1，主题有3个分区 p0、p1、p2，那么对应的分配如下：
 ::: center
 非平均分配
 
@@ -38,9 +37,21 @@ c0: p1  p2
 
 c1: p3 
 :::
-范围分配策略可能会导致分配并不均匀，有可能出现部分消费者过载的情况。
+* 范围分配策略可能会导致分配并不均匀，有可能出现部分消费者过载的情况。
 
 ## 三、轮询分配
+* 轮询分配策略（RoundRobinAssignor）的原理是将消费组内所有消费者及消费者订阅的所有主题的分区按照字典序排序，然后通过轮询方式逐个将分区依次分配给每个消费者。如果同一个消费组内所有的消费者的订阅信息都是相同的，那么RoundRobinAssignor分配策略的分区分配会是均匀的。
+举个例子，假设消费组中有2个消费者C0和C1，都订阅了主题t0和t1，并且每个主题都有3个分区，那么订阅的所有分区可以标识为：t0p0、t0p1、t0p2、t1p0、t1p1、t1p2。最终的分配结果为：
+::: center
+非平均分配
+
+c0: t0p0、t0p2、t1p1
+
+c0: t0p1、t1p0、t1p2
+:::
+* 如果同一个消费组内的消费者订阅的信息是不相同的，那么在执行分区分配的时候就不是完全的轮询分配，有可能导致分区分配得不均匀。如果某个消费者没有订阅消费组内的某个主题，那么在分配分区的时候此消费者将分配不到这个主题的任何分区。
+* 举个例子，假设消费组内有3个消费者（C0、C1和C2），它们共订阅了3个主题（t0、t1、t2），这3个主题分别有1、2、3个分区，即整个消费组订阅了t0p0、t1p0、t1p1、t2p0、t2p1、t2p2这6个分区。
+
 
 ## 四、保留分配
 
