--- a/docs/01.语言/02.C++/01.构造函数.md
+++ b/docs/01.语言/02.C++/01.构造函数.md
@@ -176,6 +176,7 @@ public:
     // 移动构造函数
     MyClass(MyClass &&other) noexcept : data(other.data), size(other.size)
     {
+        // 右值引用类型只是用于匹配右值，而并非表示一个右值。尽量不要声明右值引用类型的变量，而只在函数形参使用它以匹配右值。
         other.data = nullptr;
         other.size = 0;
         name = "move construct";
@@ -236,7 +237,7 @@ int main(int argc, char **argv)
     MyClass x, y, z, a;
     // 执行带参构造函数
     MyClass b(data, 3, "b");
-    // 执行拷贝构造函数
+    // 执行拷贝构造函数，c 是被创建出来的对象
     MyClass c = a; // important
     // 执行拷贝构造函数
     MyClass d(a);
@@ -245,9 +246,9 @@ int main(int argc, char **argv)
 
     std::cout << "-----------------" << std::endl;
 
-    // 执行拷贝赋值函数
+    // 执行拷贝赋值函数，y 是已经存在的对象
     y = b;
-    // 执行移动赋值函数
+    // 执行移动赋值函数，将左值 c 强制转换为右值，否则就是拷贝赋值函数
     z = std::move(c);
 
     std::cout << "-----------------" << std::endl;
