--- a/docs/02.后端技术/04.Kafka/06.Kafka 分区分配策略介绍.md
+++ b/docs/02.后端技术/04.Kafka/06.Kafka 分区分配策略介绍.md
@@ -41,17 +41,36 @@ c1: p3
 
 ## 三、轮询分配
 * 轮询分配策略（RoundRobinAssignor）的原理是将消费组内所有消费者及消费者订阅的所有主题的分区按照字典序排序，然后通过轮询方式逐个将分区依次分配给每个消费者。如果同一个消费组内所有的消费者的订阅信息都是相同的，那么RoundRobinAssignor分配策略的分区分配会是均匀的。
-举个例子，假设消费组中有2个消费者C0和C1，都订阅了主题t0和t1，并且每个主题都有3个分区，那么订阅的所有分区可以标识为：t0p0、t0p1、t0p2、t1p0、t1p1、t1p2。最终的分配结果为：
+* 例如，假设消费组中有2个消费者C0和C1，都订阅了主题t0和t1，并且每个主题都有3个分区，那么订阅的所有分区可以标识为：t0p0、t0p1、t0p2、t1p0、t1p1、t1p2。最终的分配结果为：
 ::: center
 非平均分配
 
 c0: t0p0、t0p2、t1p1
 
-c0: t0p1、t1p0、t1p2
+c1: t0p1、t1p0、t1p2
 :::
 * 如果同一个消费组内的消费者订阅的信息是不相同的，那么在执行分区分配的时候就不是完全的轮询分配，有可能导致分区分配得不均匀。如果某个消费者没有订阅消费组内的某个主题，那么在分配分区的时候此消费者将分配不到这个主题的任何分区。
-* 举个例子，假设消费组内有3个消费者（C0、C1和C2），它们共订阅了3个主题（t0、t1、t2），这3个主题分别有1、2、3个分区，即整个消费组订阅了t0p0、t1p0、t1p1、t2p0、t2p1、t2p2这6个分区。
+* 例如，假设消费组内有3个消费者（C0、C1和C2），它们共订阅了3个主题（t0、t1、t2），这3个主题分别有1、2、3个分区，即整个消费组订阅了t0p0、t1p0、t1p1、t2p0、t2p1、t2p2这6个分区。消费者C0订阅的是主题t0，消费者C1订阅的是主题t0和t1，消费者C2订阅的是主题t0、t1和t2，那么最终的分配结果为：
+::: center
+非平均分配
+
+c0: t0p0
+
+c1: t1p0
+
+c2: t1p1、t2p0、t2p1、t2p2
+:::
+* 范围分配策略也可能会导致分配并不均匀，有可能出现部分消费者过载的情况。
+
+## 四、黏性分配
+* 粘性分配策略（StickyAssignor）的原理是在分配分区时在保证均匀的情况下尽可能与上次分配的分区保持相同，这有助于节省一些主题分区从一个使用者移动到另一个使用者时的开销处理。
+* 在重新分配期间，它将以以下方式执行重新分配：在新的分配中主题分区仍尽可能均匀地分布，并且主题分区尽可能地与先前分配的使用者保持在一起，优先保证均匀。
+* 例如，
 
 
-## 四、保留分配
 
+
+>**参考文章**<br>
+> [1] [RangeAssignor](https://kafka.apache.org/31/javadoc/org/apache/kafka/clients/consumer/RangeAssignor.html)
+> [2] [RoundRobinAssignor](https://kafka.apache.org/31/javadoc/org/apache/kafka/clients/consumer/RoundRobinAssignor.html)
+> [3] [StickyAssignor](https://kafka.apache.org/31/javadoc/org/apache/kafka/clients/consumer/StickyAssignor.html)
