--- a/docs/02.后端技术/04.Kafka/10.kafka客户端自动识别新增分区.md
+++ b/docs/02.后端技术/04.Kafka/10.kafka客户端自动识别新增分区.md
@@ -18,52 +18,14 @@ author:
 
 广告曝光日志会通过 filebeat 写入 Kafka，下游服务消费 Kafka 获取日志信息并进行后续处理。由于最近巴黎奥运会热点事件频发，经常短时间内流量急剧暴涨，Kafka集群中心部分机器达到性能瓶颈，导致这些机器上的分区出现了消费堆积（写入也有问题），影响下游服务，Kafka 同学通过扩展对应 topic 的分区数量解决该问题。
 
-Kafka 客户端消费服务是基于 go 语言编写的，使用的是 sarama-cluster 库，当分区数量增加时，没有自动识别出来，此时如果没有手动重启客户端触发 rebalance，则无法消费到新的分区导致消息丢失，影响后续业务。
+Kafka 客户端消费服务是基于 go 语言编写的，使用的是 sarama-cluster 库，**当分区数量增加时，没有自动识别出来，此时如果没有手动重启客户端触发 rebalance，则无法消费到新的分区导致消息丢失，影响后续业务**。
 
 ## 二、go 常用的 Kafka 库
-<!-- 
-**Sarama** 和 **Sarama-cluster** 都是用于 Go 语言编写的 Apache Kafka 客户端库，它们提供了与 Kafka 集群进行通信的丰富功能和便捷方法。下面我会分别介绍它们的特点和用途：
-
-### Sarama
-
-**Sarama** 是一个纯粹的 Kafka 客户端库，它提供了与 Kafka 生产者和消费者进行交互的基本功能。主要特点包括：
-
-1. **简单易用的 API**：Sarama 提供了简洁的 API，使得在 Go 语言中轻松地实现 Kafka 生产者和消费者。
-   
-2. **支持多版本 Kafka**：Sarama 支持 Kafka 0.8.2及以上版本，并针对不同的 Kafka 版本提供了相应的功能支持。
-
-3. **高性能**：设计上优化了性能，尽可能地减少了与 Kafka 服务器之间的通信开销。
-
-4. **灵活的配置选项**：可以配置多个参数，如连接超时、批量发送消息、消息压缩等，以满足不同场景下的需求。
-
-5. **异步处理**：支持异步发送消息和异步处理接收到的消息，以提高吞吐量和响应性能。
-
-Sarama 适合那些需要直接与 Kafka 交互，并且希望对底层细节有更多控制的应用程序。
-
-### Sarama-cluster
-
-**Sarama-cluster** 是基于 Sarama 构建的扩展库，专门用于简化基于 Kafka 集群的消费者组管理。其主要特点包括：
-
-1. **消费者组管理**：Sarama-cluster 提供了更高级的消费者组管理功能，包括动态重新平衡、消费者偏移量的管理等。
-
-2. **消费者健康监控**：能够监控消费者的健康状态，并支持自动故障转移和恢复。
-
-3. **集群感知**：可以识别 Kafka 集群的所有 broker 节点，并自动在它们之间进行负载均衡。
-
-4. **Offset 管理**：提供了管理消费者组偏移量的功能，确保消费者能够从上次停止的地方继续消费。
-
-5. **动态重新平衡**：在消费者加入或退出时，能够自动调整分配给每个消费者的分区，以确保负载均衡。
-
-Sarama-cluster 适合那些需要在多个消费者之间进行协调和负载均衡的应用程序，特别是大规模和高可用性的 Kafka 消费者。
-
-### 总结
-
-- **Sarama** 是一个基础的 Kafka 客户端库，适合简单的生产者和消费者实现。
-- **Sarama-cluster** 在 Sarama 的基础上提供了更高级的消费者组管理功能，适合需要管理多个消费者实例的复杂应用场景。
-
-根据你的具体需求和项目规模，选择适合的库可以有效地简化开发工作并提升系统的稳定性和性能。
- -->
-
+* go 语言常用的 Kafka 第三方库有 sarama、sarama-cluster、Kafka-go、confluent-kafka-go 四种库；
+* **Sarama** 是一个纯粹的 Kafka 客户端库，它提供了与 Kafka 生产者和消费者进行交互的基本功能，支持多版本 Kafka、灵活的配置选项、异步处理等功能；
+* **Sarama-cluster** 是基于低版本的 Sarama 构建的扩展库，专门用于简化基于 Kafka 集群的消费者组管理，2020 年后就已经停止更新了，其所支持的功能在 sarama 中已经支持了，详见issue[IBM/sarama#1099](https://github.com/IBM/sarama/pull/1099)；
+* **kafka-go** 是一个用于与 Kafka 进行交互的 Go 语言客户端库，支持 Kafka 的一些低级和高级功能，主要包括：自动管理分区和消费位移、消息压缩、分区副本管理、消息的序列化和反序列化、错误处理和重试机制等；
+* **confluent-kafka-go** 是 Confluent 提供的一个 Go 语言客户端库，用于与 Apache Kafka 进行交互。这个库是基于 librdkafka，librdkafka 是一个流行的 C 语言库，用于 Kafka 的客户端实现。confluent-kafka-go 提供了高效且功能全面的 Kafka 客户端接口，适用于 Go 应用程序；
 
 ## 三、sarama 
 ### 1，官方地址
@@ -79,6 +41,7 @@ Package sarama 是一个纯 Go 客户端库，用于处理 0.8 及更高版本 A
 
 ### 3，客户端示例代码
 * 此处选用的 sarama 包版本是 v1.38.1，更高版本与我们的服务端版本不兼容，无法正常消费消息；
+* `client.Consume(ctx, topics, &consumer)`函数是一个阻塞调用，当（rebalance）分区数量变化或是消费者数量变化时结束阻塞，所以该函数调用一定要在 for 循环中，保证可以再次开始消费数据；
 
 ```go
 package main
@@ -213,9 +176,11 @@ func (consumer *Consumer) ConsumeClaim(session sarama.ConsumerGroupSession, clai
 ## 四、sarama-cluster
 
 ### 1，官方地址
- [「sarama官方地址」]()，[「kafka协议地址」]()
+ [「sarama-cluster官方地址」](https://github.com/bsm/sarama-cluster)
 
 ### 2，简单介绍
+* **Sarama-cluster** 是基于低版本的 Sarama 构建的扩展库，专门用于简化基于 Kafka 集群的消费者组管理，2020 年后就已经停止更新了，其所支持的功能在 sarama 中已经支持了，详见issue[IBM/sarama#1099](https://github.com/IBM/sarama/pull/1099)；
+
 ### 3，客户端示例代码
 ```go
 package main
@@ -325,11 +290,14 @@ func consume(topic, group string, consumer *cluster.Consumer) {
 	sarama.Logger.Println("consumer quit finish", zap.String("topic", topic))
 }
 ```
+
 ## 五、kafka-go
 ### 1，官方地址
- [「sarama官方地址」]()，[「kafka协议地址」]()
+ [「kafka-go官方地址」](https://github.com/segmentio/kafka-go)
 
 ### 2，简单介绍
+* **kafka-go** 是一个用于与 Kafka 进行交互的 Go 语言客户端库，支持 Kafka 的一些低级和高级功能，主要包括：自动管理分区和消费位移、消息压缩、分区副本管理、消息的序列化和反序列化、错误处理和重试机制等；
+
 ### 3，客户端示例代码
 ```go
 package main
@@ -404,11 +372,16 @@ func consume(group string, r *kafka.Reader) {
 	}
 }
 ```
+
 ## 六、confluent-kafka-go
 ### 1，官方地址
- [「sarama官方地址」]()，[「kafka协议地址」]()
+ [「confluent-kafka-go官方地址」]()
 
 ### 2，简单介绍
+* **confluent-kafka-go** 是 Confluent 提供的一个 Go 语言客户端库，用于与 Apache Kafka 进行交互。这个库是基于 librdkafka，librdkafka 是一个流行的 C 语言库，用于 Kafka 的客户端实现。confluent-kafka-go 提供了高效且功能全面的 Kafka 客户端接口，适用于 Go 应用程序；
+* confluent-kafka-go 库依赖于 C 语言的 librdkafka 库，这使得它能够利用 librdkafka 提供的高性能和可靠性。librdkafka 是 Kafka 的一个成熟和高效的客户端库，支持 Kafka 的所有核心功能：包括生产和消费消息、事务支持、分区管理、消费位移管理等，可以满足大多数生产环境中对 Kafka 的需求；
+
+
 ### 3，客户端示例代码
 ```go
 package main
@@ -488,6 +461,6 @@ func consume(group string, c *kafka.Consumer) {
 }
 ```
 ## 七、总结
-
-kafka 的 go 客户端常用的几个库分别是 sarama、sarama-cluster、kafka-go、confluent-kafka-go。
-另外有一个小问题，即使能够自动识别新分区触发 rebalance，如果客户端的消费起始位移配置的是从最新处开始消费，当客户端 rebalance 完毕开始从新分区消费消息时，是从分区的最新处开始消费，客户端无法消费在新分区开始接收消息到客户端开始从新分区消费消息这段时间内的消息，导致消息丢失。
+* kafka 的 go 客户端常用的几个库分别是 sarama、sarama-cluster、kafka-go、confluent-kafka-go。
+* <span style="color: red;">**通过对这几个库的测试发现，只有 sarama 和 confluent-kafka-go 两个库可以自动识别新分区，但一定需要注意sarama消费函数的写法，需要放在 for 循环中**</span>；
+* 另外有一个问题是，即使能够自动识别新分区触发 rebalance，如果客户端的消费起始位移配置的是从最新处开始消费，当客户端 rebalance 完毕开始从新分区消费消息时，是从分区的最新处开始消费，客户端无法消费在新分区开始接收消息到客户端开始从新分区消费消息这段时间内的消息，导致消息丢失。
