--- a/docs/02.后端技术/00.Linux/02.流量复制技术-gor.md
+++ b/docs/02.后端技术/00.Linux/02.流量复制技术-gor.md
@@ -102,7 +102,6 @@ author:
 ### 3，输入选项
 #### 3.1 文件输入
 ```sh
-
 # 从文件中读取请求，可能是以前录制的文件
 # eg：gor --input-file ./requests.gor --output-http staging.com
 --input-file value
@@ -119,41 +118,46 @@ author:
 # 尝试提前读取和缓存多个记录，与此同时，如果它们无序的话它还执行请求排序。由于它需要在内存中保存这个缓冲区，较大的值可能会导致性能变差(默认值为100)。
 --input-file-read-depth int
 ```
+
 #### 3.2 原始输入
 ```sh
-
+# 从给定的端口捕获流量
+# gor --input-raw :8080 --output-http staging.com
 --input-raw value
-Capture traffic from given port (use RAW sockets and require *sudo* access):
-# Capture traffic from 8080 port
-gor --input-raw :8080 --output-http staging.com
+
+# 如果打开，gor将记录丢失数据包的 HTTP 消息
 --input-raw-allow-incomplete
-If turned on Gor will record HTTP messages with missing packets
+
+# BPF过滤器编写自定义表达式，可用于非标准网络接口，如隧道或SPAN端口
+# eg：--input-raw-bpf-filter 'dst port 80'
 --input-raw-bpf-filter string
-BPF filter to write custom expressions. Can be useful in case of non standard network interfaces like tunneling or SPAN port. Example: --input-raw-bpf-filter 'dst port 80'
+
+# 控制操作系统缓冲区的大小，该缓冲区保存数据包直到它们被调度。默认值取决于系统:在Linux中大约为2MB。如果你看到大的包被丢弃，可以增加这个值。
 --input-raw-buffer-size value
-Controls size of the OS buffer which holds packets until they dispatched. Default value depends by system: in Linux around 2MB. If you see big package drop, increase this value.
+
+# 设置pcap超时时间，对于立即模式，不要设置此标志
 --input-raw-buffer-timeout duration
-set the pcap timeout. for immediate mode don't set this flag
+
+# 使用 'libpcap(默认)'、'raw_socket' 或 'pcap_file'拦截流量
 --input-raw-engine libpcap
-Intercept traffic using libpcap (default), `raw_socket` or `pcap_file`
+
+# 等待最后一个TCP数据包的时间，直到认为TCP消息完成(默认2 s)
 --input-raw-expire duration
-How much it should wait for the last TCP packet, till consider that TCP message complete. (default 2s)
---input-raw-monitor
-enable RF monitor mode
---input-raw-override-snaplen
-Override the capture snaplen to be 64k. Required for some Virtualized environments
---input-raw-promisc
-enable promiscuous mode
+
+# 指定拦截流量的应用协议，取值范围：http、binary
 --input-raw-protocol value
-Specify application protocol of intercepted traffic. Possible values: http, binary
+
+# 如果不为空，则向请求负载注入具有给定名称和真实IP值的 header，通常这个报头应该命名为:X-Real-IP
 --input-raw-realip-header string
-If not blank, injects header with given name and real IP value to the request payload. Usually this header should be named: X-Real-IP
+
+# 在原始TCP消息上启用统计信息生成器
 --input-raw-stats
-enable stats generator on raw TCP messages
+
+# 可能的值: PCAP_TSTAMP_HOST, PCAP_TSTAMP_HOST_LOWPREC, PCAP_TSTAMP_HOST_HIPREC, PCAP_TSTAMP_ADAPTER, PCAP_TSTAMP_ADAPTER_UNSYNCED。这个值不是所有系统都支持的，如果你放错了，GoReplay会告诉你可用的值。
 --input-raw-timestamp-type string
-Possible values: PCAP_TSTAMP_HOST, PCAP_TSTAMP_HOST_LOWPREC, PCAP_TSTAMP_HOST_HIPREC, PCAP_TSTAMP_ADAPTER, PCAP_TSTAMP_ADAPTER_UNSYNCED. This values not supported on all systems, GoReplay will tell you available values of you put wrong one.
+
+# 如果打开，gor将跟踪请求之外的响应，并且它们将可用于中间件和文件输出
 --input-raw-track-response
-If turned on Gor will track responses in addition to requests, and they will be available to middleware and file output.
 ```
 
 #### 3.3 Kafka 相关
@@ -161,12 +165,15 @@ If turned on Gor will track responses in addition to requests, and they will be 
 # 将请求和返回的状态发送到 Kafka 
 # eg：gor --output-stdout --input-kafka-host '192.168.0.1:9092,192.168.0.2:9092'
 --input-kafka-host string
+
+# 开启 json 格式，而不是文本格式
 --input-kafka-json-format
-If turned on, it will assume that messages coming in JSON format rather than  GoReplay text format.
+
+# 指定要发送状态的 kafka 的 topic 
+# eg：gor --output-stdout --input-kafka-topic 'kafka-log'
 --input-kafka-topic string
-Send request and response stats to Kafka:
-gor --output-stdout --input-kafka-topic 'kafka-log'
 ```
+
 #### 3.4 其他
 --input-raw- 用于捕获 HTTP 流量，您应指定 IP 地址或接口和应用程序端口。详细了解捕获和回放流量。
 --input-file- 接受以前使用 录制的文件。有关从文件保存和重放的更多信息--output-file
@@ -175,10 +182,10 @@ gor --output-stdout --input-kafka-topic 'kafka-log'
 # 用于测试输出，每秒发出一次 'Get /' 请求
 --input-dummy value
 
+# 用于Gor实例之间的内部通信。例子:
+# eg：gor --input-tcp :28020 --output-http staging.com
 --input-tcp value
-Used for internal communication between Gor instances. Example:
-# Receive requests from other Gor instances on 28020 port, and redirect output to staging
-gor --input-tcp :28020 --output-http staging.com
+
 --input-tcp-certificate string
 Path to PEM encoded certificate file. Used when TLS turned on.
 --input-tcp-certificate-key string
