--- a/docs/02.后端技术/04.Kafka/00.Kafka 常用命令介绍.md
+++ b/docs/02.后端技术/04.Kafka/00.Kafka 常用命令介绍.md
@@ -33,7 +33,7 @@ author:
 ### 3，显示主题信息
 ```sh
 # 显示所有主题信息
-./bin/kafka-topics.sh --zookeeper 127.0.0.1:12181 --describe --topic my_topic
+./bin/kafka-topics.sh --zookeeper 127.0.0.1:12181 --describe 
 # 显示指定主题的分区信息
 ./bin/kafka-topics.sh --zookeeper 127.0.0.1:12181 --describe --topic my_topic
 ```
