--- a/docs/02.后端技术/00.Linux/02.流量复制技术-gor.md
+++ b/docs/02.后端技术/00.Linux/02.流量复制技术-gor.md
@@ -162,14 +162,14 @@ author:
 
 #### 3.3 Kafka 相关
 ```sh
-# 将请求和返回的状态发送到 Kafka 
+# 从 Kafka 读取请求和返回的统计
 # eg：gor --output-stdout --input-kafka-host '192.168.0.1:9092,192.168.0.2:9092'
 --input-kafka-host string
 
 # 开启 json 格式，而不是文本格式
 --input-kafka-json-format
 
-# 指定要发送状态的 kafka 的 topic 
+# 指定要读取状态的 kafka 的 topic 
 # eg：gor --output-stdout --input-kafka-topic 'kafka-log'
 --input-kafka-topic string
 ```
@@ -182,128 +182,189 @@ author:
 # 用于测试输出，每秒发出一次 'Get /' 请求
 --input-dummy value
 
-# 用于Gor实例之间的内部通信。例子:
+# 用于Gor实例之间的内部通信
 # eg：gor --input-tcp :28020 --output-http staging.com
 --input-tcp value
 
+# PEM编码的证书文件路径，启用TLS时使用
 --input-tcp-certificate string
-Path to PEM encoded certificate file. Used when TLS turned on.
---input-tcp-certificate-key string
-Path to PEM encoded certificate key file. Used when TLS turned on.
---input-tcp-secure
-Turn on TLS security. Do not forget to specify certificate and key files.
-```
-可用输出：
-### 4，输出选项
 
---output-http- 将 HTTP 流量重放到给定端点，接受基本 URL。阅读更多关于它的信息
---output-file- 记录对文件的传入流量。有关从文件保存和重放的更多信息
---output-tcp- 将传入的数据转发到另一个 Gor 实例，与 一起使用。阅读有关聚合器-转发器设置的更多信息。--input-tcp
---output-stdout- 用于调试，将所有数据输出到 stdout。
+# PEM编码的证书秘钥文件路径，启用TLS时使用
+--input-tcp-certificate-key string
+
+# 开启 TLS 安全校验，别忘了指定证书和秘钥文件的路径
+--input-tcp-secure
+```
+
+### 4，输出选项
+#### 4.1 输出到其他 http
 ```sh
--kafka-tls-ca-cert string
-CA certificate for Kafka TLS Config:
-gor  --input-raw :3000 --output-kafka-host '192.168.0.1:9092' --output-kafka-topic 'topic' --kafka-tls-ca-cert cacert.cer.pem --kafka-tls-client-cert client.cer.pem --kafka-tls-client-key client.key.pem
--kafka-tls-client-cert string
-Client certificate for Kafka TLS Config (mandatory with to kafka-tls-ca-cert and kafka-tls-client-key)
--kafka-tls-client-key string
-Client Key for Kafka TLS Config (mandatory with to kafka-tls-client-cert and kafka-tls-client-key)
--memprofile string
-write memory profile to this file
--middleware string
-Used for modifying traffic using external command
--output-binary value
-Forwards incoming binary payloads to given address.
-# Redirect all incoming requests to staging.com address
-gor --input-raw :80 --input-raw-protocol binary --output-binary staging.com:80
--output-binary-debug
-Enables binary debug output.
--output-binary-timeout duration
-Specify HTTP request/response timeout. By default 5s. Example: --output-binary-timeout 30s
--output-binary-track-response
-If turned on, Binary output responses will be set to all outputs like stdout, file and etc.
--output-binary-workers int
-Gor uses dynamic worker scaling by default.  Enter a number to run a set number of workers.
--output-file value
-Write incoming requests to file:
-gor --input-raw :80 --output-file ./requests.gor
--output-file-append
-The flushed chunk is appended to existence file or not.
--output-file-buffer string
-The path for temporary storing current buffer:
-gor --input-raw :80 --output-file s3://mybucket/logs/%Y-%m-%d.gz --output-file-buffer /mnt/logs (default "/tmp")
--output-file-flush-interval duration
-Interval for forcing buffer flush to the file, default: 1s. (default 1s)
--output-file-max-size-limit value
-Max size of output file, Default: 1TB
--output-file-queue-limit int
-The length of the chunk queue. Default: 256 (default 256)
--output-file-size-limit value
-Size of each chunk. Default: 32mb
--output-http value
+# 转发请求到给定的 http 地址
+# eg：gor --input-raw :80 --output-http http://staging.com
+--output-http value
 Forwards incoming requests to given http address.
-# Redirect all incoming requests to staging.com address
-gor --input-raw :80 --output-http http://staging.com
--output-http-elasticsearch string
-Send request and response stats to ElasticSearch:
-gor --input-raw :8080 --output-http staging.com --output-http-elasticsearch 'es_host:api_port/index_name'
--output-http-queue-len int
+
+# 发送请求和响应统计到ElasticSearch
+# eg：gor --input-raw :8080 --output-http staging.com --output-http-elasticsearch 'es_host:api_port/index_name'
+--output-http-elasticsearch string
+
+--output-http-queue-len int
 Number of requests that can be queued for output, if all workers are busy. default = 1000 (default 1000)
--output-http-redirects int
+
+--output-http-redirects int
 Enable how often redirects should be followed.
--output-http-response-buffer value
+
+--output-http-response-buffer value
 HTTP response buffer size, all data after this size will be discarded.
--output-http-skip-verify
+
+--output-http-skip-verify
 Don't verify hostname on TLS secure connection.
--output-http-stats
+
+--output-http-stats
 Report http output queue stats to console every N milliseconds. See output-http-stats-ms
--output-http-stats-ms int
+
+--output-http-stats-ms int
 Report http output queue stats to console every N milliseconds. default: 5000 (default 5000)
--output-http-timeout duration
+
+--output-http-timeout duration
 Specify HTTP request/response timeout. By default 5s. Example: --output-http-timeout 30s (default 5s)
--output-http-track-response
+
+--output-http-track-response
 If turned on, HTTP output responses will be set to all outputs like stdout, file and etc.
--output-http-worker-timeout duration
+
+--output-http-worker-timeout duration
 Duration to rollback idle workers. (default 2s)
--output-http-workers int
+
+--output-http-workers int
 Gor uses dynamic worker scaling. Enter a number to set a maximum number of workers. default = 0 = unlimited.
--output-http-workers-min int
+
+--output-http-workers-min int
 Gor uses dynamic worker scaling. Enter a number to set a minimum number of workers. default = 1.
--output-kafka-host string
-Read request and response stats from Kafka:
-gor --input-raw :8080 --output-kafka-host '192.168.0.1:9092,192.168.0.2:9092'
--output-kafka-json-format
-If turned on, it will serialize messages from GoReplay text format to JSON.
--output-kafka-topic string
-Read request and response stats from Kafka:
-gor --input-raw :8080 --output-kafka-topic 'kafka-log'
--output-null
-Used for testing inputs. Drops all requests.
--output-stdout
-Used for testing inputs. Just prints to console data coming from inputs.
--output-tcp value
+
+```
+#### 4.2 输出到其他 gor 实例
+```sh
+
+--output-tcp value
 Used for internal communication between Gor instances. Example:
 # Listen for requests on 80 port and forward them to other Gor instance on 28020 port
 gor --input-raw :80 --output-tcp replay.local:28020
--output-tcp-response-buffer value
+
+--output-tcp-response-buffer value
 TCP response buffer size, all data after this size will be discarded.
--output-tcp-secure
+
+--output-tcp-secure
 Use TLS secure connection. --input-file on another end should have TLS turned on as well.
--output-tcp-skip-verify
+
+--output-tcp-skip-verify
 Don't verify hostname on TLS secure connection.
--output-tcp-stats
+
+--output-tcp-stats
 Report TCP output queue stats to console every 5 seconds.
--output-tcp-sticky
+
+--output-tcp-sticky
 Use Sticky connection. Request/Response with same ID will be sent to the same connection.
--output-tcp-workers int
+
+--output-tcp-workers int
 Number of parallel tcp connections, default is 10 (default 10)
--prettify-http
+
+```
+#### 4.3 输出到文件
+```sh
+
+# 将输入的请求写入文件
+# eg：gor --input-raw :80 --output-file ./requests.gor
+--output-file value
+
+# 以追加的方式写入文件
+--output-file-append
+
+# 临时存储的缓冲区路径
+# eg：gor --input-raw :80 --output-file s3://mybucket/logs/%Y-%m-%d.gz --output-file-buffer /mnt/logs (default "/tmp")
+--output-file-buffer string
+
+# 强制缓冲区刷入到文件的时间间隔，默认 1 s
+--output-file-flush-interval duration
+
+# 输出文件的最大大小，默认 1TB
+--output-file-max-size-limit value
+
+# 块队列的大小，默认 256
+--output-file-queue-limit int
+
+# 每个块的大小，默认 32mb
+--output-file-size-limit value
+```
+#### 4.4 输出到标准输出
+```sh
+
+--output-null
+Used for testing inputs. Drops all requests.
+
+--output-stdout
+Used for testing inputs. Just prints to console data coming from inputs.
+
+```
+#### 4.5 二进制输出
+```sh
+# 将传入的二进制有效负载转发到给定地址
+# eg：gor --input-raw :80 --input-raw-protocol binary --output-binary staging.com:80
+--output-binary value
+
+# 开启二进制的 debug 输出
+--output-binary-debug
+
+# 指定HTTP请求/响应超时，默认值为 5s
+--output-binary-timeout duration
+
+# 如果打开，二进制输出响应将设置为所有输出，如stdout, file等。
+--output-binary-track-response
+
+# 默认情况下，Gor 动态缩放 worker 数量，也可以直接指定
+--output-binary-workers int
+```
+#### 4.6 Kafka 相关
+```sh
+# Kafka TLS 配置的 CA 证书
+# eg：gor  --input-raw :3000 --output-kafka-host '192.168.0.1:9092' --output-kafka-topic 'topic' --kafka-tls-ca-cert cacert.cer.pem --kafka-tls-client-cert client.cer.pem --kafka-tls-client-key client.key.pem
+--kafka-tls-ca-cert string
+
+# Kafka TLS 配置的客户端证书
+--kafka-tls-client-cert string
+
+# Kafka TLS 配置的客户端秘钥
+--kafka-tls-client-key string
+
+# 将请求和返回的统计发送到 Kafka 
+# eg：gor --input-raw :8080 --output-kafka-host '192.168.0.1:9092,192.168.0.2:9092'
+--output-kafka-host string
+
+# 以 json 的格式而非文本
+--output-kafka-json-format
+
+# 指定 topic
+# eg：gor --input-raw :8080 --output-kafka-topic 'kafka-log'
+--output-kafka-topic string
+```
+
+#### 4.7 其他
+```sh
+# 输出内存采样数据到指定文件
+--memprofile string
+
+# 用于通过外部命令修改流量
+--middleware string
+
+
+--prettify-http
 If enabled, will automatically decode requests and responses with: Content-Encoding: gzip and Transfer-Encoding: chunked. Useful for debugging, in conjunction with --output-stdout
 
--recognize-tcp-sessions
+--recognize-tcp-sessions
 [PRO] If turned on http output will create separate worker for each TCP session. Splitting output will session based as well.
--split-output true
+
+--split-output true
 By default each output gets same traffic. If set to true it splits traffic equally among all outputs.
--stats
+
+--stats
 Turn on queue stats output
 ```
